destination reached, transition to new window

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rider_atrafficsolution">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -9,10 +8,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -21,10 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RiderATrafficSolution">
+        <activity android:name=".BusJourneyCompleteActivity"></activity>
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-
-
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,16 +32,14 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBRJLAE8J9_X3bUY8Zj65vE4h9t3-XZZ2k"
-            />
-
+            android:value="AIzaSyBRJLAE8J9_X3bUY8Zj65vE4h9t3-XZZ2k" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".ShowBusLoationActivity"
-            android:label="@string/title_activity_show_bus_loation"></activity>
+            android:label="@string/title_activity_show_bus_loation" />
         <activity android:name=".BusSeatSelection" />
         <activity android:name=".ChooseVehicleActivity" />
         <activity android:name=".EmailAuthActivity" />
