request confirm activity initiated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rider_atrafficsolution">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -17,9 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RiderATrafficSolution">
-        <activity android:name=".RequestConfirmActivity"></activity>
-        <activity android:name=".CarBikeSearchActivity" />
-        <activity android:name=".DriverVehicleTypeSelection" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -32,6 +31,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".RequestConfirmActivity"
+            android:label="@string/title_activity_request_confirm"></activity>
+        <activity android:name=".CarBikeSearchActivity" />
+        <activity android:name=".DriverVehicleTypeSelection" />
         <activity
             android:name=".DriverLocationUpdate"
             android:label="@string/title_activity_driver_location_update" />
