--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RiderATrafficSolution">
-        <activity android:name=".TripDetailsActivity"></activity>
+        <activity android:name=".PromoCodeActivity"></activity>
+        <activity android:name=".TripDetailsActivity" />
         <activity android:name=".UserSideJourneyCompleteActivity" />
         <activity android:name=".DriverCollectCashActivity" />
         <!--
