Bus driver location update window added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rider_atrafficsolution">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,10 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RiderATrafficSolution">
-        <activity android:name=".PromoCodeActivity"></activity>
-        <activity android:name=".TripDetailsActivity" />
-        <activity android:name=".UserSideJourneyCompleteActivity" />
-        <activity android:name=".DriverCollectCashActivity" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -34,6 +32,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".BusDriverLocationUpdate"
+            android:label="@string/title_activity_bus_driver_location_update"></activity>
+        <activity android:name=".PromoCodeActivity" />
+        <activity android:name=".TripDetailsActivity" />
+        <activity android:name=".UserSideJourneyCompleteActivity" />
+        <activity android:name=".DriverCollectCashActivity" />
         <activity
             android:name=".DriverInitialSetLocationActivity"
             android:label="@string/title_activity_driver_initial_set_location" />
